cluster/clusters/cluster-0/rook-ceph/cluster/ceph-bucket-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ceph-bucket
  namespace: rook-ceph
  annotations:
    kubernetes.io/ingress.class: "nginx"
    external-dns.home.arpa/enabled: "true"
spec:
  rules:
    - host: "s3.${SECRET_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rook-ceph-rgw-ceph-objectstore
                port:
                  number: 80
  tls:
    - hosts:
        - "s3.${SECRET_DOMAIN}"
